# petico-api

./: manage.py  pyproject.toml
petico_api/: asgi.py  urls.py  wsgi.py
